@@ -65,6 +65,7 @@ MOST_SOURCES = 								\
 	roster_merge.cc roster_merge.hh					\
 	merge.cc merge.hh						\
 	legacy.cc legacy.hh uri.cc uri.hh				\
+	rev_height.cc rev_height.hh					\
 									\
         lru_cache.h							\
 									\
