@@ -19,7 +19,7 @@ using std::string;
 
 /*
  * Implementation note: hv, holding the raw revision height, is
- * formally a char[], but in fact is an array of u64 integers stored
+ * formally a string, but in fact is an array of u64 integers stored
  * in big endian byte order. The same format is used for storing
  * revision heights in the database. This has the advantage that we
  * can use memcmp() for comparing them, which will be the most common
@@ -31,58 +31,42 @@ using std::string;
  * 
  */
 
+rev_height::rev_height() {}
+
 rev_height::rev_height(rev_height const & other)
 {
-  length = other.length;
-  hv_length = other.hv_length;
-  hv = new char[hv_length];
-  memcpy(hv, other.hv, hv_length);
-}
-
-rev_height::rev_height()
-{
-  hv = NULL;
-  length = 0;
-  hv_length = 0;
-}
-
-void rev_height::resize(size_t _length)
-{
-  delete [] hv;
-  length = _length;
-  hv_length = _length * width;
-  hv = new char[hv_length];
+  d = other.d;
 }
 
 void rev_height::from_string(string const & s)
 {
-  // I(s.size % width == 0)
-  resize(s.size() / width);
-  memcpy(hv, s.data(), hv_length);
+  d = s;
 }
 
 bool rev_height::operator==(rev_height const & other) const
 {
-  if (hv_length != other.hv_length)
+  if (d.size() != other.d.size())
     return false;
 
-  return (memcmp(hv, other.hv, hv_length) == 0);
+  // sizes are equal
+  return (memcmp(d.data(), other.d.data(), d.size()) == 0);
 }
 
 bool rev_height::operator<(rev_height const & other) const
 {
-  if (hv_length == other.hv_length)
-    return (memcmp(hv, other.hv, hv_length) < 0);
+  if (d.size() == other.d.size())
+    return (memcmp(d.data(), other.d.data(), d.size()) < 0);
 
-  if (hv_length < other.hv_length)
-    return (memcmp(hv, other.hv, hv_length) <= 0);
+  if (d.size() < other.d.size())
+    return (memcmp(d.data(), other.d.data(), d.size()) <= 0);
 
-  return (memcmp(hv, other.hv, other.hv_length) >= 0);
+  // d.size() > other.d.size()
+  return (memcmp(d.data(), other.d.data(), other.d.size()) > 0);
 }
 
-void rev_height::to_string(string & s) const
+string const & rev_height::operator()() const
 {
-  s = string(hv, hv_length);
+  return d;
 }
 
 u64 rev_height::read_at(size_t pos) const
@@ -90,10 +74,10 @@ u64 rev_height::read_at(size_t pos) const
   u64 value = 0;
   size_t first = width * pos;
 
-  for (size_t i = 0; i < width; ++i)
+  for (size_t i = first; i < first + width;)
     {
-      u64 tmp = hv[first + i] & 0xff;
-      value += tmp << ((width - 1 - i) * 8);
+      value <<= 8;
+      value += d.at(i++) & 0xff;
     }
 
   return value;
@@ -104,31 +88,61 @@ void rev_height::write_at(size_t pos, u64 value)
   size_t first = width * pos;
   for (size_t i = first + width ; i > first;)
     {
-      --i;
-      hv[i] = value & 0xff;
+      d.at(--i) = value & 0xff;
       value >>= 8;
     }
+}
+
+void rev_height::append(u64 value)
+{
+  d.resize(d.size() + width);   // make room
+  write_at(size() - 1, value);
+}
+
+void rev_height::clear()
+{
+  d.clear();
+}
+
+size_t rev_height::size() const
+{
+  return d.size() / width;
 }
 
 void rev_height::child_height(rev_height & child, u64 nr) const
 {
   if (nr == 0)
     {
-      child.resize(length);
-      child.write_at(child.length - 1, read_at(length-1) + 1);
+      size_t pos = size() - 1;
+      child.from_string(d);
+      child.write_at(pos - 1, read_at(pos) + 1);
     }
   else
     {
-      child.resize(length + 2);
-      child.write_at(child.length - 2, nr - 1);
-      child.write_at(child.length - 1, 0);
+      child.from_string(d);
+      child.append(nr - 1);
+      child.append(0);
     }
 }
 
 void rev_height::root_height(rev_height & root)
 {
-  root.resize(1);
-  root.write_at(0, 0);
+  root.clear();
+  root.append(0);
+}
+
+// for debugging purposes
+
+void rev_height::dump(ostream & os) const
+{
+  bool first(true);
+  for (size_t i = 0; i < size(); ++i)
+    {
+      if (!first)
+	os << '.';
+      os << read_at(i);
+      first = false;
+    }
 }
 
 ostream & operator <<(ostream & os, rev_height const & h)
@@ -137,14 +151,3 @@ ostream & operator <<(ostream & os, rev_height const & h)
   return os;
 }
 
-void rev_height::dump(ostream & os) const
-{
-  bool first(true);
-  for (size_t i = 0; i < length; ++i)
-    {
-      if (!first)
-	os << '.';
-      os << read_at(i);
-      first = false;
-    }
-}
