@@ -1,5 +1,11 @@
 2006-09-06  Thomas Moschny  <thomas.moschny@gmx.de>
 
+	* rev_height.cc, rev_height.hh: Get rid of that ugly
+	char[]. Correct a bug in operator<().
+	* Makefile.am (MOST_SOURCES): Add rev_height.{cc|hh}.
+
+2006-09-06  Thomas Moschny  <thomas.moschny@gmx.de>
+
 	* rev_height.cc, rev_height.hh: Add a class for the revision
 	height.
 
